fix carousel on services for mobile

--- a/index.html
+++ b/index.html
@@ -368,137 +368,56 @@
             </section>
 
             <section id="services-carousel">
-                    <div id="related-portfolio" class="owl-carousel owl-carousel-full portfolio-carousel portfolio-notitle portfolio-nomargin carousel-widget" data-margin="0" data-loop="true" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="4" data-speed="1000" data-autoplay="7000">
+                <div class="owl-carousel services-carousel">
 
-                        <div class="oc-item" data-toggle="modal" data-target="#veneers">
-                            <div class="iportfolio">
-                                <div class="portfolio-image">
-                                    <div class="img-wrap">
-                                        <img src="images/services/veneers.jpg" alt="Veneers">
-                                    </div>
-                                </div>
-                                <div class="portfolio-desc">
-                                    <span>Veneers</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="oc-item" data-toggle="modal" data-target="#pain-relief">
-                            <div class="iportfolio">
-                                <div class="portfolio-image">
-                                    <div class="img-wrap">
-                                        <img src="images/services/pain-relief.jpg" alt="Veneers">
-                                    </div>
-                                </div>
-                                <div class="portfolio-desc">
-                                    <span>Pain Relief</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="oc-item" data-toggle="modal" data-target="#sleep-apnea">
-                            <div class="iportfolio">
-                                <div class="portfolio-image">
-                                    <div class="img-wrap">
-                                        <img src="images/services/apnea.jpg" alt="Veneers">
-                                    </div>
-                                </div>
-                                <div class="portfolio-desc">
-                                    <span>Sleep Apnea</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="oc-item" data-toggle="modal" data-target="#crowns">
-                            <div class="iportfolio">
-                                <div class="portfolio-image">
-                                    <div class="img-wrap">
-                                        <img src="images/services/crowns.jpg" alt="Veneers">
-                                    </div>
-                                </div>
-                                <div class="portfolio-desc">
-                                    <span>Crowns</span>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="owl-item" data-toggle="modal" data-target="#veneers">
+                        <img src="images/services/veneers.jpg" alt="Service Image">
+                        <h5 class="floating-owl-title">Veneers</h5>
+                    </div>
 
-                        <div class="oc-item" data-toggle="modal" data-target="#bridges">
-                            <div class="iportfolio">
-                                <div class="portfolio-image">
-                                    <div class="img-wrap">
-                                        <img src="images/services/bridges.jpg" alt="Bridges">
-                                    </div>
-                                </div>
-                                <div class="portfolio-desc">
-                                    <span>Bridges</span>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="owl-item"  data-toggle="modal" data-target="#pain-relief">
+                        <img src="images/services/pain-relief.jpg" alt="Service Image">
+                        <h5 class="floating-owl-title">Pain Relief</h5>
+                    </div>
 
-                        <div class="oc-item" data-toggle="modal" data-target="#composites">
-                            <div class="iportfolio">
-                                <div class="portfolio-image">
-                                    <div class="img-wrap">
-                                        <img src="images/services/composites.jpg" alt="Composites">
-                                    </div>
-                                </div>
-                                <div class="portfolio-desc">
-                                    <span>Restorations</span>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="owl-item" data-toggle="modal" data-target="#sleep-apnea">
+                        <img src="images/services/apnea.jpg" alt="Service Image">
+                        <h5 class="floating-owl-title">Sleep Apnea</h5>
+                    </div>
 
-                        <div class="oc-item" data-toggle="modal" data-target="#dentures">
-                            <div class="iportfolio">
-                                <div class="portfolio-image">
-                                    <div class="img-wrap">
-                                        <img src="images/services/dentures.jpg" alt="Dentures">
-                                    </div>
-                                </div>
-                                <div class="portfolio-desc">
-                                    <span>Dentures</span>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="owl-item" data-toggle="modal" data-target="#crowns">
+                        <img src="images/services/crowns.jpg" alt="Service Image">
+                        <h5 class="floating-owl-title">Crowns</h5>
+                    </div>
 
-                        <div class="oc-item" data-toggle="modal" data-target="#laser">
-                            <div class="iportfolio">
-                                <div class="portfolio-image">
-                                    <div class="img-wrap">
-                                        <img src="images/services/laser.jpg" alt="Laser">
-                                    </div>
-                                </div>
-                                <div class="portfolio-desc">
-                                    <span>Laser</span>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="owl-item" data-toggle="modal" data-target="#bridges">
+                        <img src="images/services/bridges.jpg" alt="Service Image">
+                        <h5 class="floating-owl-title">Bridges</h5>
+                    </div>
 
-                        <div class="oc-item" data-toggle="modal" data-target="#onlays">
-                            <div class="iportfolio">
-                                <div class="portfolio-image">
-                                    <div class="img-wrap">
-                                        <img src="images/services/onlays.jpg" alt="Onlays">
-                                    </div>
-                                </div>
-                                <div class="portfolio-desc">
-                                    <span>Onlays</span>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="owl-item" data-toggle="modal" data-target="#composites">
+                        <img src="images/services/composites.jpg" alt="Service Image">
+                        <h5 class="floating-owl-title">Restorations</h5>
+                    </div>
 
-                        <div class="oc-item" data-toggle="modal" data-target="#periodontal">
-                            <div class="iportfolio">
-                                <div class="portfolio-image">
-                                    <div class="img-wrap">
-                                        <img src="images/services/periodontal.jpg" alt="Periodontal">
-                                    </div>
-                                </div>
-                                <div class="portfolio-desc">
-                                    <span>Periodontal</span>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="owl-item" data-toggle="modal" data-target="#dentures">
+                        <img src="images/services/dentures.jpg" alt="Service Image">
+                        <h5 class="floating-owl-title">Dentures</h5>
+                    </div>
 
+                    <div class="owl-item" data-toggle="modal" data-target="#laser">
+                        <img src="images/services/laser.jpg" alt="Service Image">
+                        <h5 class="floating-owl-title">Laser</h5>
+                    </div>
 
-                    </div><!-- .portfolio-carousel end -->
+                    <div class="owl-item" data-toggle="modal" data-target="#onlays">
+                        <img src="images/services/onlays.jpg" alt="Service Image">
+                        <h5 class="floating-owl-title">Onlays</h5>
+                    </div>
+                    <div class="owl-item" data-toggle="modal" data-target="#periodontal">
+                        <img src="images/services/periodontal.jpg" alt="Service Image">
+                        <h5 class="floating-owl-title">Periodontal</h5>
+                    </div>
             </section>
 
 
