HTML validation fix

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             </section>
 
 
-            <!---- Fall Specials Section ----->
+            <!-- Fall Specials Section -->
             <section id="specials-top">
                 <div class="container">
                     <div class="center specials-top">
@@ -418,12 +418,14 @@
                         <img src="images/services/periodontal.jpg" alt="Service Image">
                         <h5 class="floating-owl-title">Periodontal</h5>
                     </div>
+                </div>
             </section>
 
 
 
-            <!---- Contact Section ----->
+            <!-- Contact Section -->
             <section id="contact" class="section-contact full-screen section nopadding nomargin noborder ohidden">
+                <h6 class="hidden">Empty Tag</h6>
                 <div class="vertical-middle">
                     <div class="container clearfix">
                         <!-- Contact Form Overlay
@@ -494,7 +496,7 @@
 
         <!-- Copyrights
        ============================================= -->
-        <section class="gmap-2 hidden-lg hidden-md hidden-sm"><a href="https://goo.gl/maps/ntoVJKYos4F2" target="_blank"><img src="images/google-map-full.png" alt="Map Image"></a></section>
+        <section class="gmap-2 hidden-lg hidden-md hidden-sm"><a href="https://goo.gl/maps/ntoVJKYos4F2" target="_blank"><h6 class="hidden">Empty Tag</h6><img src="images/google-map-full.png" alt="Map Image"></a></section>
 
         <div id="sub-copyright">
             <div class="center">
