adjust spacing in phone slugs

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en-US">
 <head>
 
-    <title>Alpharetta Dentist - Estelle Zandstra, DDS</title>
+    <title>#1 Alpharetta Dentist - Estelle Zandstra, DDS</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="Dr. Estelle Zandstra is one of Alpharetta’s most loved dentists. Join us for a $49 Limited Time New Patient Special. Read our patient reviews!" />
     <meta name="keywords" content="alpharetta georgia dentist, alpharetta georgia alpharetta georgia general dentist, alpharetta georgia cosmetic dentist, alpharetta georgia dental, alpharetta dentist, alpharetta general dentist, alpharetta cosmetic dentist, alpharetta nc dental, alpharetta dental, alpharetta georgia family dentist, alpharetta family dentist, alpharetta crowns, alpharetta georgia crowns, alpharetta georgia root canals, alpharetta root canals, alpharetta georgia veneers, alpharetta veneers, alpharetta georgia tooth whitening, alpharetta tooth whitening, alpharetta georgia smile whitening, alpharetta smile whitening" />
@@ -34,7 +34,7 @@
             <!-- Logo
         ============================================= -->
             <div id="logo">
-                <a href="#" data-scrollto="#header" class="standard-logo"><img src="images/logo-header.png" alt="Zandstra Logo"></a>
+                <a href="#" data-scrollto="#header" class="standard-logo"><img src="images/logo-header.svg" alt="Zandstra Logo"></a>
                 <a href="#" data-scrollto="#header" class="retina-logo"><img src="images/logo-header.png"
                                                                              alt="Zandstra Logo"></a>
             </div><!-- #logo end -->
@@ -58,7 +58,7 @@
                     <li class="current"><a href="#" data-scrollto="#services-top" data-offset="85">
                         <div>Services</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="60">
+                    <li class="current"><a href="#" data-scrollto="#contact" data-offset="60">
                         <div>Location</div>
                     </a></li>
                 </ul>
@@ -146,6 +146,9 @@
                     </div>
                 </div>
             </div>
+            <a href="#" data-scrollto="#meet-the-doctor" data-offset="90" class="one-page-arrow">
+                <i class="icon-angle-down infinite animated bounce"></i>
+            </a>
         </div>
     </div>
 </section>
