adjust text in slide 3

--- a/index.html
+++ b/index.html
@@ -132,14 +132,7 @@
                 <div class="swiper-slide" id="slide-3">
                     <div class="container clearfix">
                         <div class="slider-caption slider-caption-left">
-                            <div data-caption-animate="fadeInUp" data-caption-delay="200" class="star-set center">
-                                <i class="icon-star3"></i>
-                                <i class="icon-star3"></i>
-                                <i class="icon-star3"></i>
-                                <i class="icon-star3"></i>
-                                <i class="icon-star3"></i>
-                            </div>
-                            <h2 data-caption-animate="fadeInUp" data-caption-delay="200" class="center">5-Star Reviews</h2>
+                            <h2 data-caption-animate="fadeInUp" data-caption-delay="200" class="center">Cosmetic &amp; Restorative&nbsp;Dentistry</h2>
                             <h4 class="center" data-caption-animate="fadeInUp" data-caption-delay="200">Read what our patients have to<br class="hidden-xs hidden-xxs"><span class="hidden-md hidden-lg hidden-sm"> </span>say about Dr. Zandstra!</h4>
                             <div class="center"><a class="button" data-caption-animate="fadeInUp" data-caption-delay="200" href="#" data-offset="60" data-scrollto="#reviews">READ OUR REVIEWS</a></div>
                         </div>
