adjust h3 text in services

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                             <a class="button delay-btn" data-toggle="modal" data-target="#office-tour-modal">VIEW OFFICE TOUR</a>
                         </div>
                         <div class="col-sm-6 center">
-                            <img src="images/office-tour-photo.png" alt="Office Tour Photo">
+                            <div data-toggle="modal" data-target="#office-tour-modal"><img src="images/office-tour-photo.png" alt="Office Tour Photo"></div>
                         </div>
                     </div>
                 </div>
