adjust mobile map in footer

--- a/index.html
+++ b/index.html
@@ -488,7 +488,10 @@
 
         <!-- Copyrights
        ============================================= -->
-        <section class="gmap-2 hidden-lg hidden-md hidden-sm"><a href="https://goo.gl/maps/ntoVJKYos4F2" target="_blank"><h6 class="hidden">Empty Tag</h6><img src="images/google-map-full.png" alt="Map Image"></a></section>
+        <section class="gmap-2 hidden-lg hidden-md hidden-sm"><a href="https://goo.gl/maps/ntoVJKYos4F2" target="_blank"><h6 class="hidden">Empty Tag</h6>
+            <div class="map-wrap-1"><img src="images/google-map-full.png" alt="Map Image"></div>
+            <div class="map-wrap-2"><img src="images/map-xxs.jpg" alt="Mobile map"></div>
+        </a></section>
 
         <div id="sub-copyright">
             <div class="center">
