--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- Logo
         ============================================= -->
             <div id="logo">
-                <a href="#" data-scrollto="#header" class="standard-logo"><img src="images/logo-header.svg" alt="Zandstra Logo"></a>
+                <a href="#" data-scrollto="#header" class="standard-logo"><img src="images/logo-header.png" alt="Zandstra Logo"></a>
                 <a href="#" data-scrollto="#header" class="retina-logo"><img src="images/logo-header.png"
                                                                              alt="Zandstra Logo"></a>
             </div><!-- #logo end -->
