add in smoothscroll to mobile slide

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 
 
-    <section id="slider" class="slider-parallax full-screen with-header swiper_wrapper clearfix" data-loop="true" data-speed="1000" data-autoplay="7000">
+    <section id="slider" class="hidden-sm hidden-xs hidden-xxs slider-parallax full-screen with-header swiper_wrapper clearfix" data-loop="true" data-speed="1000" data-autoplay="7000">
 
     <div class="slider-parallax-inner">
 
@@ -132,7 +132,7 @@
                 <div class="swiper-slide" id="slide-3">
                     <div class="container clearfix">
                         <div class="slider-caption slider-caption-left">
-                            <h2 data-caption-animate="fadeInUp" data-caption-delay="200" class="center">Cosmetic &amp; Restorative&nbsp;Dentistry</h2>
+                            <h2 data-caption-animate="fadeInUp" data-caption-delay="200" class="center">Cosmetic<br>&amp;&nbsp;Restorative<br>Dentistry</h2>
                             <h4 class="center" data-caption-animate="fadeInUp" data-caption-delay="200">Read what our patients have to<br class="hidden-xs hidden-xxs"><span class="hidden-md hidden-lg hidden-sm"> </span>say about Dr. Zandstra!</h4>
                             <div class="center"><a class="button" data-caption-animate="fadeInUp" data-caption-delay="200" href="#" data-offset="60" data-scrollto="#reviews">READ OUR REVIEWS</a></div>
                         </div>
@@ -145,6 +145,9 @@
         </div>
     </div>
 </section>
+    <div class="mobile-slide" class="hidden-lg hidden-md">
+        <a href="#" data-scrollto="#specials-top" data-offset="0"><img src="images/mobile-slide-zandstra.jpg" alt="Mobile Slide"></a>
+    </div>
 <div class="clear"></div>
 
 <!-- Content -->
