--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
     </div>
 </section>
-    <div class="mobile-slide" class="hidden-lg hidden-md">
+    <div class="mobile-slide hidden-lg hidden-md">
         <a href="#" data-scrollto="#specials-top" data-offset="0"><img src="images/mobile-slide-zandstra.jpg" alt="Mobile Slide"></a>
     </div>
 <div class="clear"></div>
