--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <!-- Logo
         ============================================= -->
             <div id="logo">
-                <a href="#" data-scrollto="#header" class="standard-logo"><img src="images/logo-copy.svg" alt="Zandstra Logo"></a>
-                <a href="#" data-scrollto="#header" class="retina-logo"><img src="images/logo-header.svg"
+                <a class="standard-logo"><img src="images/logo-header.svg" alt="Zandstra Logo"></a>
+                <a class="retina-logo"><img src="images/logo-header.svg"
                                                                              alt="Zandstra Logo"></a>
             </div><!-- #logo end -->
 
