fix meet the doctors section text size

--- a/index.html
+++ b/index.html
@@ -179,14 +179,17 @@
 
             <section id="meet-the-doctor" class="hidden-sm hidden-xs hidden-xxs">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-sm-4">
+                    <div class="mobile-title">
 
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4 col-lg-5">
+                            <img src="images/zandstra-mobile-bio.jpg" alt="Zandstra Mobile Bio">
                         </div>
-                        <div class="col-sm-8 col-md-push-2">
-                            <h3>Meet the Doctor</h3>
-                            <h2>Dr. Estelle Zandstra</h2>
-                            <h4>General and Cosmetic Dentist</h4>
+                        <div class="col-sm-8 col-md-push-2 col-lg-7">
+                            <h3 class="hidden-md hidden-sm hidden-xs hidden-xxs">Meet the Doctor</h3>
+                            <h2 class="move-mobile">Dr. Estelle Zandstra</h2>
+                            <h4 class="move-mobile">General and Cosmetic Dentist</h4>
                             <p>
                                 The minute you walk through the door you will know you’ve come to the right place. By combining advanced dental technology and training with a gentle, friendly style, Dr. Estelle Zandstra and her team will make you more comfortable than you ever thought&nbsp;possible.</p>
 
