replace logo with bottom one

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <!-- Logo
         ============================================= -->
             <div id="logo">
-                <a class="standard-logo"><img src="images/logo-header.svg" alt="Zandstra Logo"></a>
-                <a class="retina-logo"><img src="images/logo-header.svg"
+                <a class="standard-logo"><img src="images/zandstra-logo-BOTTTOM.svg" alt="Zandstra Logo"></a>
+                <a class="retina-logo"><img src="images/zandstra-logo-BOTTTOM.svg"
                                                                              alt="Zandstra Logo"></a>
             </div><!-- #logo end -->
 
@@ -184,7 +184,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4 col-lg-5">
-                            <img src="images/zandstra-mobile-bio.jpg" alt="Zandstra Mobile Bio">
+                            <img class="hidden-lg" src="images/zandstra-mobile-bio.jpg" alt="Zandstra Mobile Bio">
                         </div>
                         <div class="col-sm-8 col-md-push-2 col-lg-7">
                             <h3 class="hidden-md hidden-sm hidden-xs hidden-xxs">Meet the Doctor</h3>
