fix spacing for doctors section

--- a/index.html
+++ b/index.html
@@ -179,15 +179,15 @@
 
             <section id="meet-the-doctor" class="hidden-sm hidden-xs hidden-xxs">
                 <div class="container">
-                    <div class="mobile-title">
+                    <div class="mobile-attach">
 
                     </div>
                     <div class="row">
                         <div class="col-sm-4 col-lg-5">
                             <img class="hidden-lg" src="images/zandstra-mobile-bio.jpg" alt="Zandstra Mobile Bio">
                         </div>
-                        <div class="col-sm-8 col-md-push-2 col-lg-7">
-                            <h3 class="hidden-md hidden-sm hidden-xs hidden-xxs">Meet the Doctor</h3>
+                        <div class="col-sm-8 col-lg-7">
+                            <h3 class="hidden-md hidden-sm hidden-xs hidden-xxs desktop-attach">Meet the Doctor</h3>
                             <h2 class="move-mobile">Dr. Estelle Zandstra</h2>
                             <h4 class="move-mobile">General and Cosmetic Dentist</h4>
                             <p>
